tests/compile_fail/unnamed_parameter_definition/source.c
int f(int) {
    return 0;
}

int main(void) {
    return f(1);
}
